--- a/build.properties
+++ b/build.properties
@@ -1,4 +1,4 @@
 # Project specific information
 package=org.usfirst.frc.team766.robot
-robot.class=${package}.Robot
+robot.class=${package}.SideSwipe
 simulation.world.file=/usr/share/frcsim/worlds/GearsBotDemo.world
